clusters/cluster/apps/media/flaresolverr/deployment-flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
      - name: flaresolverr
        image: flaresolverr/flaresolverr:latest
        ports:
        - containerPort: 8191
        volumeMounts:
        - name: config-volume
          mountPath: /config
          subPath: media/flaresolverr
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-pvc
