clusters/cluster/apps/media/flaresolverr/service-flaresolverr.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: apps
spec:
  selector:
    app: flaresolverr
  ports:
    - protocol: TCP
      port: 8191
      targetPort: 8191
      name: http
