clusters/cluster/apps/media/flaresolverr/ingress-flaresolverr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr-ingress
  namespace: apps
spec:
  rules:
    - host: flaresolverr.${cluster_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaresolverr
                port:
                  number: 8191
